Added score, and can reset game

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <div id="hole"></div>
       <div id="character"></div>
     </div>
+    <p class="score">Score: <span id="score">0</span></p>
+    <button id="reset-btn">Reset game</button>
 
     <script src="script.js"></script>
   </body>
